--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alpine js sandboxc</title>
+  <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://unpkg.com/alpinejs" defer></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -74,6 +75,9 @@
         <strong x-show="text.length > 0" x-text="text  + '\'s length is ' + text.length"></strong>
       </div>
     </div>
+
+    <!-- x-html -->
+    <div x-html="(await axios.get('https://jsonplaceholder.typicode.com/users')).data"></div>
 
   </div>
 </body>
