--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div x-data="{open: false, name: 'Moniruzzaman Saikat'}">
       <button class="btn btn-primary mb-2" x-on:click="open = !open">Toggle</button>
 
-      <div class="card" x-show="open" x-cloak>
+      <div class="card" x-show="open" x-cloak x-transition>
         <div class="card-body">
           <p>
             <strong x-text="name"></strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla facilis,
@@ -47,7 +47,7 @@
     <!-- x-bind -->
     <div x-data="{show: false}" class="mt-3">
       <button class="btn btn-outline-success" x-on:click="show = !show">Toggle Show</button>
-      <div class="card bg-success my-2 text-white" x-bind:class="show ? 'd-block' : 'd-none'" x-cloak>
+      <div class="card bg-success my-2 text-white" x-bind:class="show ? 'd-block' : 'd-none'" x-cloak x-transition>
         <div class="card-body">
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum beatae commodi quisquam nisi repellat
             molestiae cupiditate minus, maxime deleniti odio quidem dignissimos blanditiis vitae at. Quos deleniti ex
@@ -78,6 +78,8 @@
 
     <!-- x-html -->
     <div x-html="(await axios.get('https://jsonplaceholder.typicode.com/users')).data"></div>
+
+
 
   </div>
 </body>
