--- a/index.html
+++ b/index.html
@@ -79,6 +79,28 @@
     <!-- x-html -->
     <div x-html="(await axios.get('https://jsonplaceholder.typicode.com/users')).data"></div>
 
+    <!-- x-for: must use <template> tag for the root -->
+    <div class="card" x-data="{
+      posts: [
+  {' userId': 1, 'id' : 1, 'title' : 'sunt aut facere repellat provident occaecati excepturi optio reprehenderit'
+      , 'body'
+      : 'quia et suscipit\nsuscipit recusandae consequuntur expedita et cum\nreprehenderit molestiae ut ut quas totam\nnostrum rerum est autem sunt rem eveniet architecto'
+      }, { 'userId' : 1, 'id' : 2, 'title' : 'qui est esse' , 'body'
+      : 'est rerum tempore vitae\nsequi sint nihil reprehenderit dolor beatae ea dolores neque\nfugiat blanditiis voluptate porro vel nihil molestiae ut reiciendis\nqui aperiam non debitis possimus qui neque nisi nulla'
+      }, { 'userId' : 1, 'id' : 3, 'title' : 'ea molestias quasi exercitationem repellat qui ipsa sit aut' , 'body'
+      : 'et iusto sed quo iure\nvoluptatem occaecati omnis eligendi aut ad\nvoluptatem doloribus vel accusantium quis pariatur\nmolestiae porro eius odio et labore et velit aut'
+      }, ] }">
+
+      <template x-for="post in posts" class="">
+        <div class="card m-2">
+          <div class="card-body">
+            <h2 x-text="post.title"></h2>
+            <p x-text="post.body"></p>
+          </div>
+        </div>
+      </template>
+
+    </div>
 
 
   </div>
