--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
       </template>
     </div>
 
+    <!-- x-init -->
+    <div class="card my-3 " x-init="date = new Date()">
+      <div class="card-body">
+        <h2>x-init: Run code when an element is initialized by Alpine</h2>
+      </div>
+    </div>
 
   </div>
 </body>
