--- a/properties.html
+++ b/properties.html
@@ -8,6 +8,7 @@
   <title>Alpine.js properties</title>
   <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://unpkg.com/alpinejs" defer></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
@@ -15,14 +16,32 @@
     [x-cloak] {
       display: none;
     }
+
+    .bg-dark * {
+      color: white;
+    }
   </style>
 
 </head>
 
-<body>
+<body x-data :class="$store.darkMode.on && 'bg-dark'">
   <div class="container">
     <h1 class="text-center display-2">Alpine.js properties</h1>
+    <button :class="$store.darkMode.on && 'bg-dark'" class="btn btn-primary" @click="$store.darkMode.toggle()">Toggle
+      Theme</button>
   </div>
+
+  <script>
+    document.addEventListener('alpine:init', () => {
+
+      Alpine.store('darkMode', {
+        on: true,
+        toggle: function () {
+          this.on = !this.on;
+        }
+      });
+    })
+  </script>
 </body>
 
 </html>
