--- a/properties.html
+++ b/properties.html
@@ -8,9 +8,7 @@
   <title>Alpine.js properties</title>
   <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://unpkg.com/alpinejs" defer></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
     [x-cloak] {
@@ -20,15 +18,52 @@
     .bg-dark * {
       color: white;
     }
+
+    .shaked {
+      animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
+      transform: translate3d(0, 0, 0);
+      backface-visibility: hidden;
+      perspective: 1000px;
+    }
+
+    @keyframes shake {
+
+      10%,
+      90% {
+        transform: translate3d(-1px, 0, 0);
+      }
+
+      20%,
+      80% {
+        transform: translate3d(2px, 0, 0);
+      }
+
+      30%,
+      50%,
+      70% {
+        transform: translate3d(-4px, 0, 0);
+      }
+
+      40%,
+      60% {
+        transform: translate3d(4px, 0, 0);
+      }
+    }
   </style>
 
 </head>
 
 <body x-data :class="$store.darkMode.on && 'bg-dark'">
   <div class="container">
-    <h1 class="text-center display-2">Alpine.js properties</h1>
+    <h1 x-ref="animated" class="text-center display-2">Alpine.js properties</h1>
     <button :class="$store.darkMode.on && 'bg-dark'" class="btn btn-primary" @click="$store.darkMode.toggle()">Toggle
       Theme</button>
+    <button :class="$store.darkMode.on && 'bg-dark'" class="btn btn-primary" @click="
+      $refs.animated.className = 'text-center display-2 shaked';
+      setTimeout(() => {
+        $refs.animated.className = 'text-center display-2';
+      }, 1000);
+    ">Shake</button>
   </div>
 
   <script>
