--- a/properties.html
+++ b/properties.html
@@ -44,7 +44,30 @@
       perspective: 1000px;
     }
 
+    .overlay {
+      width: 100%;
+      min-height: 100vh;
+      background-color: rgba(0, 0, 0, 0.7);
+      position: fixed;
+      top: 0;
+      left: 0;
+    }
 
+    .custom-modal {
+      position: fixed;
+      width: 400px;
+      height: auto;
+      padding: 1.2rem;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: #fff;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
+    .custom-modal * {
+      color: #000 !important;
+    }
 
     @keyframes shake {
 
@@ -89,7 +112,11 @@
     <h2 class="mt-3">List of posts</h2>
     <div class="card" x-data="{title: ''}" @add-post="$store.posts.add($event.detail)">
       <div class="card-body">
-        <form @submit.prevent="$dispatch('add-post', title); title = ''">
+        <form @submit.prevent="
+          if(!title.length) $store.modal.show = true;
+          $dispatch('add-post', title); 
+          title = ''; 
+        ">
           <div class="form-group">
             <label for="title">Post title</label>
             <input x-model="title" type="text" id="title" class="form-control mt-2" placeholder="Enter post title">
@@ -117,6 +144,16 @@
         </div>
       </div>
     </template>
+
+    <!-- render modal -->
+    <div x-show="$store.modal.show" class="overlay"></div>
+    <div class="custom-modal" x-show="$store.modal.show">
+      <div class="d-flex justify-content-between">
+        <h3>Modal</h3>
+        <button class="btn btn-danger btn-sm align-self-baseline" @click="$store.modal.show = false">x</button>
+      </div>
+      <p x-text="$store.modal.text"></p>
+    </div>
   </div>
 
   <script>
@@ -142,8 +179,6 @@
         },],
 
         add(title) {
-          if (!title.trim()) return alert('title can\'t be empty ')
-
           const post = {
             userId: 1,
             id: new Date().toTimeString(),
@@ -165,6 +200,11 @@
           this.on = !this.on;
         }
       });
+
+      Alpine.store('modal', {
+        show: false,
+        text: 'You must enter some text'
+      })
     })
   </script>
 </body>
